<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LoL Hangouts</string>
    <string name="app_version">2.2.1</string>
    <string name="region_name">region name</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="region_selection_header">Please select your region</string>
    <string name="online">Online</string>
    <string name="away">Away</string>
    <string name="offline">Offline</string>

    <!--preference keys-->
    <string name="pref_load_icon">pref_load_icon</string>
    <string name="pref_history">pref_history</string>
    <string name="pref_notify_vibrate">pref_notify_vibrate</string>
    <string name="pref_notify_sound">pref_notify_sound</string>
    <string name="pref_notify_msg">pref_notify_msg</string>
    <string name="pref_notify_login">pref_notify_login</string>
    <string name="pref_max_msg">pref_max_msg</string>
    <string name="pref_notify_app_running">pref_notify_app_running</string>

    <!--preference summary-->
    <string name="pref_load_icon_summary">Turn off to reduce memory and data usage.</string>
    <string name="pref_history_summary">Auto delete message older than the specified period.</string>
    <string name="pref_max_msg_summary">Limit the number of messages that will load in your chat screen (default 20)</string>
    <string name="pref_notify_app_running_summary">Show an icon when the app is running and you are connected. *Require logging in again </string>

    <!--error messages-->
    <string name="no_match_hist">404: Unable to find any match history.</string>
    <string name="no_champion">404: Unable to find any ranked champion data.</string>
    <string name="no_profile">404: Unable to find summoner profile.</string>
    <string name="server_down">server is currently down. Try again later.</string>
    <string name="reconnecting">Chat connection lost! Reconnecting…\n(Re-login manually if this takes too long)</string>
    <string name="error_add_friend">Failed to add friend.</string>
    <string name="err_empty_user">Username field cannot be empty</string>
    <string name="err_empty_pass">Password field cannot be empty</string>
    <string name="err_empty_msg">Can\'t send empty message</string>
    <string name="err_sending_msg">An error occurred while trying to send the message</string>
    <string name="err_send_to_nobody">Can\'t send message to nobody</string>
    <string name="err_authentication">Invalid!</string>
    <string name="err_connect_to_server">Cannot connect to server.</string>
    <string name="err_get_data">An unexpected error occurred while retrieving the data</string>
    <string name="err_summ_search">Could not find %1$s in %2$s.</string>
    <string name="data_not_found">404: Data not found.</string>
    <string name="no_wifi">Connection Issues</string>
    <string name="server_busy">Server Busy</string>
    <string name="not_in_game">is not in a game or it has not started.</string>
    <string name="no_connection">No connection. Please try again.</string>
    <string name="summoner_not_found">Summoner does not exist. Please try again.</string>
    <string name="unexpected_err">An unexpected error has occurred.</string>
    <string name="app_out_of_date_title">App is out of date</string>
    <string name="app_out_of_date_body">Please update the app to get this feature working again.</string>

    <!-- friend list -->
    <string name="friends_moved_to_group">%1$d friend(s) moved to %2$s group.</string>
    <string name="friend_req_sent">Friend request sent successfully.</string>
    <string name="group_created">%1$s group created.</string>
    <string name="notify_available_enable">Notify when %1$s is available ENABLED</string>
    <string name="notify_available_disable">Notify when %1$s is available DISABLED</string>

    <!--dialog messages-->
    <string name="dialog_delete_title">Delete All Messages?</string>
    <string name="dialog_delete_message">Delete all messages with this friend.</string>
    <string name="dialog_logout_title">Logging out?</string>
    <string name="dialog_logout_message">Sure you want to log out?</string>

    <!--ads related-->
    <string name="ads_disabled">Restart app to Disable ads!</string>
    <string name="ads_already_disabled">Ads already removed.</string>

    <string name="back_to_exit">Click BACK again to exit</string>

    <string name="ask_rate_app">Like this app? Please click here to go rate it.</string>
    <string name="crash_toast_text">A crash report was sent to the developer.</string>

    <string name="summoner_search_screen_msg">Use the search to find other summoner\'s profile.</string>
    <string name="live_game_screen_msg">Use the search to view players statistics in a game. (Must be in game or at loading screen)</string>

    <string name="offline_mode_warning">You are in offline mode. Friend list will not update until you switch to a different mode.</string>

    <!-- Others -->
    <string name="change_log">Change Log</string>
    <string name="about">About</string>
    <string name="add_friend">add friend</string>
    <string name="del_all_msg">delete all messages</string>
    <string name="new_status_msg">New status message</string>
    <string name="search">Search</string>
    <string name="regions">regions</string>
    <string name="ranked_solo_queue">Ranked Solo Queue</string>
    <string name="username">Username</string>
    <string name="win_rate">Win Rate</string>
    <string name="kda">K/D/A</string>
    <string name="rank_elo">Rank Elo</string>
    <string name="save_username">Save username</string>
    <string name="rank">Rank</string>
    <string name="offline_login">Offline login</string>
    <string name="status">status:</string>
    <string name="normal">Normal</string>
    <string name="ranked">Ranked</string>
    <string name="save_pass">Save password</string>
    <string name="region">Region:</string>
    <string name="ranked_stats">Ranked Stats</string>
    <string name="win">Win</string>
    <string name="elo">Elo</string>
    <string name="game_played">Game Played</string>
    <string name="total_kills">Total Kills</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="total_assists">Total Assists</string>
    <string name="double_kills">Double Kills</string>
    <string name="triple_kills">Triple Kills</string>
    <string name="quadra_kills">Quadra Kills</string>
    <string name="penta_kills">Penta Kills</string>
    <string name="tier_division">tier division</string>
    <string name="league">League</string>
    <string name="points">points</string>
    <string name="guest">Guest</string>
    <string name="in_guest_mode">In guest mode</string>
    <string name="chat_unavailable_in_guest_mode">Chat feature is unavailable in Guest mode. Please login to use it.</string>
    <string name="stats">Statistics</string>
    <string name="most_played">Most Played</string>
    <string name="oops">Oops</string>
    <string name="info">info</string>
    <string name="perf_icon_description">Performance with a champion compared to the average player\'s performance with the same champion</string>
    <string name="match_hist_kill_icon_description">Number of kills for the match</string>
    <string name="match_hist_death_icon_description">Number of deaths for the match</string>
    <string name="match_hist_assist_icon_description">Number of assists for the match</string>
    <string name="match_hist_cs_icon_description">Creep Score for the match</string>
    <string name="match_hist_gold_icon_description">Gold Earned for the match</string>
    <string name="top_champ_kill_icon_description">Average Kills per Game with a champion</string>
    <string name="top_champ_death_icon_description">Average Deaths per Game with a champion</string>
    <string name="top_champ_assist_icon_description">Average Assists per Game with a champion</string>
    <string name="top_champ_cs_icon_description">Average Creep Score per Game with a champion</string>
    <string name="top_champ_gold_icon_description">Average Gold Earned per Game with a champion</string>
    <string name="send_msg_to">To</string>
    <string name="dismiss">dismiss</string>

    <string-array name="history">
        <item>1 day</item>
        <item>3 days</item>
        <item>7 days</item>
        <item>never</item>
    </string-array>

    <string-array name="regions">
        <item>BR</item>
        <item>EUNE</item>
        <item>EUW</item>
        <item>KR</item>
        <item>LAN</item>
        <item>LAS</item>
        <item>NA</item>
        <item>OCE</item>
        <item>RU</item>
        <item>TR</item>
    </string-array>
</resources>

