<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Notification">
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_notify_login"
                android:textColor="@android:color/darker_gray"
                android:title="Notify friend login"/>
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_notify_msg"
                android:title="Notify receive Msg"/>
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_notify_sound"
                android:title="Sound"/>
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_notify_vibrate"
                android:title="Vibration"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Friend">
        <SwitchPreference
                android:defaultValue="true"
                android:key="@string/pref_load_icon"
                android:title="Load friend icon"
                android:summary="@string/pref_load_icon_summary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="Chat">
        <ListPreference
                android:title="History"
                android:summary="@string/pref_history_summary"
                android:key="@string/pref_history"
                android:entries="@array/history"
                android:entryValues="@array/history"
                android:defaultValue="3 days"/>

        <EditTextPreference
                android:title="Show max # of messages"
                android:summary="@string/pref_max_msg_summary"
                android:inputType="number"
                android:defaultValue="20"
                android:key="@string/pref_max_msg"
                />
    </PreferenceCategory>
</PreferenceScreen>