<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/imageView15"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_preformace_graph"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/perf_icon_description"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView15"
            android:layout_toEndOf="@+id/imageView15"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            />

    <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/imageView16"
            android:src="@drawable/ic_kills"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/match_hist_kill_icon_description"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"
            android:layout_marginBottom="16dp"
            />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/match_hist_death_icon_description"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView7"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_marginBottom="16dp"
                />

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageView17"
                android:src="@drawable/ic_deaths"
                android:layout_alignTop="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/match_hist_assist_icon_description"
                android:id="@+id/textView11"
                android:layout_below="@+id/textView8"
                android:layout_alignLeft="@+id/textView8"
                android:layout_alignStart="@+id/textView8"
                android:layout_marginBottom="16dp"
                />

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageView18"
                android:src="@drawable/ic_assists"
                android:layout_alignTop="@+id/textView11"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/match_hist_cs_icon_description"
                android:id="@+id/textView13"
                android:layout_below="@+id/textView11"
                android:layout_alignLeft="@+id/textView11"
                android:layout_alignStart="@+id/textView11"
                android:layout_marginBottom="16dp"
                />

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageView19"
                android:src="@drawable/ic_cs"
                android:layout_alignTop="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/match_hist_gold_icon_description"
                android:id="@+id/textView14"
                android:layout_below="@+id/textView13"
                android:layout_alignLeft="@+id/textView13"
                android:layout_alignStart="@+id/textView13"
                android:layout_marginBottom="16dp"
                />

        <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:id="@+id/imageView20"
                android:src="@drawable/ic_gold"
                android:layout_alignTop="@+id/textView14"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                />

</RelativeLayout>