<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:circle="http://schemas.android.com/apk/res-auto"
                xmlns:fancy="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
        >


    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/img_live_game_champ"
            android:src="@drawable/league_icon"
            android:layout_below="@+id/tv_live_game_name"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_marginTop="4dp"
            circle:riv_corner_radius="24dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="2dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/tv_live_game_name"
            android:visibility="visible"
            android:textSize="18sp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/img_live_game_champ"
            android:layout_alignStart="@+id/img_live_game_champ"
            android:textStyle="bold"
            android:textColor="@android:color/holo_purple"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:id="@+id/tv_live_game_elo"
            android:gravity="center"
            android:textSize="42sp"
            android:textColor="@color/primary"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="S4 info"
            android:id="@+id/tv_live_game_s4_leag_info"
            android:layout_below="@+id/img_s4_badge"
            android:gravity="center"
            android:visibility="visible"
            android:textSize="11sp"
            android:textColor="@color/accent"
            android:layout_alignRight="@+id/img_s4_badge"
            android:layout_alignEnd="@+id/img_s4_badge"
            android:layout_alignLeft="@+id/img_s4_badge"
            android:layout_alignStart="@+id/img_s4_badge"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rank_elo"
            android:id="@+id/textView"
            android:layout_below="@+id/tv_live_game_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="S5 Rank"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="16dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            android:visibility="visible"/>

    <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/img_s4_badge"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:src="@drawable/league_icon"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignEnd="@+id/textView2"
            android:visibility="visible"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/normal"
            android:id="@+id/textView4"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:layout_marginTop="108dp"
            android:layout_marginLeft="12dp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ranked"
            android:id="@+id/textView5"
            android:layout_alignTop="@+id/textView4"
            android:layout_centerHorizontal="true"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="KDA"
            android:id="@+id/textView6"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignLeft="@+id/tv_live_game_s4_leag_info"
            android:layout_alignStart="@+id/tv_live_game_s4_leag_info"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"
            android:layout_alignRight="@+id/tv_live_game_s4_leag_lp"
            android:layout_alignEnd="@+id/tv_live_game_s4_leag_lp"/>

    <com.sakout.fancybuttons.FancyButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fancy:text="View Profile"
            fancy:borderColor="@color/accent"
            fancy:borderWidth="2dp"
            fancy:defaultColor="@android:color/transparent"
            fancy:focusColor="@color/primary_light"
            fancy:radius="5dp"
            android:id="@+id/btn_live_game_profile"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            />

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/img_live_game_spell1"
            android:src="@drawable/ic_load_unknown"
            circle:riv_corner_radius="28dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:layout_alignTop="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_champ"
            android:layout_marginLeft="4dp"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/img_live_game_spell2"
            android:src="@drawable/ic_load_unknown"
            circle:riv_corner_radius="28dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:layout_alignBottom="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_champ"
            android:layout_marginLeft="4dp"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/img_live_game_serie_1"
            android:layout_below="@+id/img_live_game_champ"
            android:layout_alignLeft="@+id/img_live_game_champ"
            android:layout_alignStart="@+id/img_live_game_champ"
            android:layout_marginRight="6dp"
            circle:riv_corner_radius="5dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:src="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/img_live_game_serie_2"
            android:layout_below="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_serie_1"
            android:layout_marginRight="6dp"
            circle:riv_corner_radius="5dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:src="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/img_live_game_serie_3"
            android:layout_below="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_serie_2"
            android:layout_marginRight="6dp"
            circle:riv_corner_radius="5dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:src="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/img_live_game_serie_4"
            android:layout_below="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_serie_3"
            android:layout_marginRight="6dp"
            circle:riv_corner_radius="5dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:src="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:id="@+id/img_live_game_serie_5"
            android:layout_below="@+id/img_live_game_champ"
            android:layout_toRightOf="@+id/img_live_game_serie_4"
            android:layout_marginRight="6dp"
            circle:riv_corner_radius="5dip"
            circle:riv_border_color="@color/my_orange"
            circle:riv_border_width="1dp"
            android:src="@android:color/transparent"
            android:layout_marginTop="4dp"
            android:visibility="invisible"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(100 LP)"
            android:id="@+id/tv_live_game_s4_leag_lp"
            android:textSize="11sp"
            android:layout_below="@+id/tv_live_game_s4_leag_info"
            android:layout_alignLeft="@+id/tv_live_game_s4_leag_info"
            android:layout_alignStart="@+id/tv_live_game_s4_leag_info"
            android:layout_alignRight="@+id/tv_live_game_s4_leag_info"
            android:layout_alignEnd="@+id/tv_live_game_s4_leag_info"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6"
            android:layout_alignRight="@+id/textView6"
            android:layout_alignEnd="@+id/textView6"
            android:gravity="center"
            android:layout_below="@+id/textView6">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.5"
                android:id="@+id/tv_live_game_rank_k"
                android:textColor="@color/md_light_green_700"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:id="@+id/textView9"
                android:textColor="@color/secondary_text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.5"
                android:id="@+id/tv_live_game_rank_d"
                android:textColor="@color/md_red_700"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:id="@+id/textView12"
                android:textColor="@color/secondary_text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.5"
                android:id="@+id/tv_live_game_rank_a"
                android:textColor="@color/md_yellow_800"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4"
            android:layout_alignRight="@+id/textView4"
            android:layout_alignEnd="@+id/textView4"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100 W"
                android:id="@+id/tv_live_game_normal_w"
                android:gravity="center"
                android:textColor="@color/md_light_green_700"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:id="@+id/linearLayout">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="999 W"
                android:id="@+id/tv_live_game_rank_w"
                android:gravity="center"
                android:textColor="@color/md_light_green_700"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" | "
                android:id="@+id/textView10"
                android:textColor="@color/secondary_text"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="999 L"
                android:id="@+id/tv_live_game_rank_l"
                android:textColor="@color/md_red_700"/>
    </LinearLayout>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_live_game_pre_made"
            android:layout_alignTop="@+id/tv_live_game_name"
            android:layout_toRightOf="@+id/tv_live_game_name"
            android:layout_alignBottom="@+id/tv_live_game_name"
            android:src="@drawable/ic_action_users_light_purp"
            android:visibility="invisible"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="2"
            android:id="@+id/tv_live_game_pre_made_num"
            android:layout_alignParentTop="true" android:layout_toRightOf="@+id/img_live_game_pre_made"
            android:textColor="@android:color/holo_purple"
            android:visibility="invisible"
            />

</RelativeLayout>